...
        android:layout_marginTop="96dp"
        android:layout_marginEnd="16dp"
        android:gravity="center"
        android:orientation="vertical">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/routeDetailLocation"
            style="@style/Widget.BusIsComing.RouteDetailMapControl"
            android:contentDescription="@string/route_map_current_location"
            android:elevation="5dp"
            app:icon="@drawable/ic_location_outline" />

        <com.google.android.material.button.MaterialButton
...
                </LinearLayout>
            </LinearLayout>
        </com.google.android.material.card.MaterialCardView>
    </FrameLayout>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/routeDetailSheet"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:behavior_fitToContents="false"
        app:behavior_hideable="false"
        app:behavior_peekHeight="240dp"
        app:cardBackgroundColor="@color/bus_surface"
...
