...
        android:icon="@drawable/ic_nav_search_state"
        android:title="@string/nav_routes"
        app:contentDescription="@string/nav_routes_content_description" />
    <item
        android:id="@+id/navigation_settings"
        android:icon="@drawable/ic_nav_settings_state"
        android:title="@string/settings"
        app:contentDescription="@string/settings" />
</menu>

